create post-info partial and each loop as well as create post functionality and api routes

--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -16,7 +16,7 @@
         <div class="row align-items-end justify-content-between pb-5 g-3">
           <div class="col-auto">
             <h3>
-              Feed
+              Dust Pile
             </h3>
             <p class="text-700 lh-sm mb-0">
               Explore user entries across the entire Blockdust ecosystem
@@ -100,187 +100,11 @@
               </tr>
             </thead>
             <tbody class="list" id="table-latest-post-body">
-              <!-- Sample Post 1 -->
-              <tr
-                class="hover-actions-trigger btn-reveal-trigger position-static"
-              >
-              {{!-- TITLE --}}
-                <td
-                  class="align-middle title white-space-nowrap"
-                  style="min-width:360px;"
-                >
-                  <h6 class="fw-semi-bold mb-0">
-                    Fitbit Sense Advanced Smartwatch with Tools
-                  </h6>
-                </td>
-                {{!-- USER --}}
-                <td
-                  class="align-middle user white-space-nowrap"
-                  style="min-width:200px;"
-                >
-                  <div class="d-flex align-items-center">
-                    <div class="avatar avatar-l">
-                      <div class="avatar-name rounded-circle">
-                        <span>
-                          R
-                        </span>
-                      </div>
-                    </div>
-                    <h6 class="mb-0 ms-3 text-900">
-                      Richard Dawkins
-                    </h6>
-                  </div>
-                </td>
-                {{!-- COMMENTS --}}
-                <td
-                  class="align-middle comments white-space-nowrap"
-                  style="min-width:110px;"
-                >
-                  <span class="fa fa-comments text-success"></span>
-                  0 Comments
-                </td>
-                {{!-- POST --}}
-                <td
-                  class="align-middle post"
-                  style="min-width:350px;width:500px;"
-                >
-                  <p class="fs--1 fw-semi-bold text-1000 mb-0">
-                    Very helpful to get going with rapid prototype development. Great support via email when I asked question.
-                  </p>
-                </td>
-                {{!-- TIME --}}
-                <td class="align-middle text-end time white-space-nowrap">
-                  <div>
-                    <h6 class="text-1000 mb-0">
-                      Just now
-                    </h6>
-                  </div>
-                </td>
-              </tr>
-              <!-- End of Sample Post 1 -->
-              <!-- Sample Post 2 -->
-              <tr
-                class="hover-actions-trigger btn-reveal-trigger position-static"
-              >
-                {{!-- TITLE --}}
-                <td
-                  class="align-middle title white-space-nowrap"
-                  style="min-width:360px;"
-                >
-                  <h6 class="fw-semi-bold mb-0">
-                    iPhone 13 pro max-Pacific Blue-128GB storage
-                  </h6>
-                </td>
-                {{!-- USER --}}
-                <td
-                  class="align-middle user white-space-nowrap"
-                  style="min-width:200px;"
-                >
-                  <div class="d-flex align-items-center">
-                    <div class="avatar avatar-l">
-                      <img
-                        class="rounded-circle"
-                        src="/img/team/59.png"
-                        alt=""
-                      />
-                    </div>
-                    <h6 class="mb-0 ms-3 text-900">
-                      Ashley Garrett
-                    </h6>
-                  </div>
-                </td>
-                {{!-- COMMENTS --}}
-                <td
-                  class="align-middle comments white-space-nowrap"
-                  style="min-width:110px;"
-                >
-                  <span class="fa fa-comments text-dark"></span>
-                  0 Comments
-                </td>
-                {{!-- POST --}}
-                <td
-                  class="align-middle post"
-                  style="min-width:350px;width:500px;"
-                >
-                  <p class="fs--1 fw-semi-bold text-1000 mb-0">
-                    This template has allowed me to convert my existing web app into a great looking, easy to use UI in less than 2 weeks
-                  </p>
-                </td>
-                {{!-- TIME --}}
-                <td class="align-middle text-end time white-space-nowrap">
-                  <div>
-                    <h6 class="text-1000 mb-0">
-                      Just now
-                    </h6>
-                  </div>
-                </td>
-              </tr>
-              <!-- End of Sample Post 2 -->
-              <!-- Sample Post 3 -->
-              <tr
-                class="hover-actions-trigger btn-reveal-trigger position-static"
-              >
-              {{!-- TITLE --}}
-                <td
-                  class="align-middle title white-space-nowrap"
-                  style="min-width:360px;"
-                >
-                  <h6 class="fw-semi-bold mb-0">
-                    Apple MacBook Pro 13 inch-M1-8/256GB-space
-                  </h6>
-                </td>
-
-                {{!-- USER --}}
-                <td
-                  class="align-middle user white-space-nowrap"
-                  style="min-width:200px;"
-                >
-                  <div class="d-flex align-items-center">
-                    <div class="avatar avatar-l">
-                      <img
-                        class="rounded-circle"
-                        src="/img/team/58.png"
-                        alt=""
-                      />
-                    </div>
-                    <h6 class="mb-0 ms-3 text-900">
-                      Woodrow Burton
-                    </h6>
-                  </div>
-                </td>
-
-                {{!-- COMMENTS --}}
-                <td
-                  class="align-middle comments white-space-nowrap"
-                  style="min-width:110px;"
-                >
-                  <span class="fa fa-comments text-danger"></span>
-                  0 Comments
-                </td>
-
-                {{!-- POST --}}
-                <td
-                  class="align-middle post"
-                  style="min-width:350px;width:500px;"
-                >
-                  <p class="fs--1 fw-semi-bold text-1000 mb-0">
-                    I have started using this theme in the last week and it has really impressed me very much, the support is second to n...
-                    <a href="#!">
-                      See more
-                    </a>
-                  </p>
-                </td>
-
-                {{!-- TIME --}}
-                <td class="align-middle text-end time white-space-nowrap">
-                  <div>
-                    <h6 class="text-1000 mb-0">
-                      Just now
-                    </h6>
-                  </div>
-                </td>
-              </tr>
-              <!-- End of Sample Post 3 -->
+              {{#each posts as |post|}}
+                <tr class="hover-actions-trigger btn-reveal-trigger position-static">
+                  {{> post-info post}}
+                </tr>
+              {{/each}}
             </tbody>
           </table>
         </div>
