--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -7,7 +7,7 @@
     <div class="text-center py-9">
       <img
         class="img-fluid mb-7"
-        src="/img/spot-illustrations/3.gif"
+        src="/img/spot-illustrations/2.svg"
         alt=""
       />
       <h1 class="text-800 fw-normal mb-5">
