--- a/views/partials/vertical_nav.handlebars
+++ b/views/partials/vertical_nav.handlebars
@@ -32,7 +32,7 @@
                   <span data-feather="flag"></span>
                 </span>
                 <span class="nav-link-text">
-                  Feed
+                  Dust Pile
                 </span>
               </div>
             </a>
