--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -69,7 +69,7 @@
         </div>
         {{! Posts Table }}
         <div class="table-responsive mx-n1 px-1 scrollbar">
-          <table class="table fs--2 mb-0 overflow-hidden">
+          <table class="table table-hover table-striped fs--2 mb-0 overflow-hidden">
             <thead>
               <tr>
                 <th
