--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -55,7 +55,8 @@
         </div>
         {{! Posts Table }}
         <div class="table-responsive mx-n1 px-1 scrollbar">
-          <table class="table fs--2 mb-0 overflow-hidden">
+          <table class="table table-hover fs--2 mb-0 overflow-hidden">
+            <caption>List of posts by all users</caption>
             <thead>
               <tr>
                 <th
