add pointer to feed rows

--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -102,7 +102,7 @@
             </thead>
             <tbody class="list" id="table-latest-post-body">
               {{#each posts as |post|}}
-                <tr class="hover-actions-trigger btn-reveal-trigger position-static">
+                <tr class="hover-actions-trigger btn-reveal-trigger position-static" style="cursor: pointer;">
                   {{> post-info post}}
                 </tr>
               {{/each}}
