--- a/views/partials/vertical_nav.handlebars
+++ b/views/partials/vertical_nav.handlebars
@@ -22,7 +22,7 @@
             </p>
             <a
               class="nav-link"
-              href="/feed"
+              href="/"
               role="button"
               data-bs-toggle=""
               aria-expanded="false"
@@ -79,7 +79,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="authentication/reset-password"
+                  href="/authentication/reset-password"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
@@ -94,7 +94,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="authentication/lock-screen"
+                  href="/authentication/lock-screen"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
