--- a/views/lock-screen.handlebars
+++ b/views/lock-screen.handlebars
@@ -5,7 +5,7 @@
         <div class="avatar avatar-3xl mb-4">
           <img
             class="rounded-circle"
-            src="/img/team/30.png"
+            src="/img/team/{{user.id}}.png"
             alt=""
           />
         </div>
@@ -13,7 +13,7 @@
           <span class="fw-normal">
             Hello
           </span>
-          Jerry Seinfield
+          {{user.username}}
         </h2>
         <p class="text-700">
           Enter your password to access the admin
