add comments KNOWN BUG: Cannot redirect to sign-in upon un-authed user attempt to comment

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -70,6 +70,7 @@
         {{! Posts Table }}
         <div class="table-responsive mx-n1 px-1 scrollbar">
           <table class="table table-striped fs--2 mb-0 overflow-hidden">
+            <caption>A list of your all-time posts</caption>
             <thead>
               <tr>
                 <th
