--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -61,7 +61,7 @@
       <span class="fas fa-ellipsis-h fs--2"></span>
     </button>
     <div class="dropdown-menu dropdown-menu-end border py-2">
-      <a class="dropdown-item" href="#!">
+      <a class="dropdown-item" href="/post/{{id}}">
         View
       </a>
       <a class="dropdown-item" href="#!">
