--- a/views/partials/top_nav.handlebars
+++ b/views/partials/top_nav.handlebars
@@ -273,7 +273,7 @@
             aria-expanded="false"
           >
             <div class="avatar avatar-l">
-              <img class="rounded-circle" src="/img/team/1.png" alt="" />
+              <img class="rounded-circle" src="/img/team/{{id}}.png" alt="" />
             </div>
           </a>
           <div
@@ -289,12 +289,12 @@
                   <div class="avatar avatar-xl">
                     <img
                       class="rounded-circle"
-                      src="/img/team/1.png"
+                      src="/img/team/{{id}}.png"
                       alt=""
                     />
                   </div>
                   <h6 class="mt-2">
-                    Jerry Seinfield
+                    {{username}}
                   </h6>
                 </div>
                 <div class="mb-3 mx-3">
