link hover icons in post-info to expanded view and change icons

--- a/views/lock-screen.handlebars
+++ b/views/lock-screen.handlebars
@@ -19,15 +19,18 @@
           Enter your password to access the admin
         </p>
       </div>
+      <form class="lock-form">
       <input
         class="form-control mb-3"
         id="password"
         type="password"
         placeholder="Enter Password"
+        name="password"
       />
-      <button class="btn btn-primary w-100">
+      <button class="btn btn-primary w-100" type="submit">
         Sign In
       </button>
+      </form>
     </div>
   </div>
 </div>
