--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,6 +1,7 @@
 {{! prettier-ignore }}
 <div class="table-responsive mx-n1 px-1 scrollbar">
   <table class="table table-striped fs--2 mb-0 overflow-hidden">
+    <caption>Comments</caption>
     <thead>
       <tr>
         <th
@@ -107,41 +108,4 @@
       {{/each}}
     </tbody>
   </table>
-</div>
-{{! Pagination }}
-<div class="row align-items-center py-2">
-  <div class="pagination d-none"></div>
-  <div class="col d-flex fs--1">
-    <p
-      class="mb-0 d-none d-sm-block me-3 fw-semi-bold text-900"
-      data-list-info
-    ></p>
-    <a class="fw-semi-bold" href="#!" data-list-view="*">
-      View all
-      <span class="fas fa-angle-right ms-1" data-fa-transform="down-1"></span>
-    </a>
-    <a class="fw-semi-bold d-none" href="#!" data-list-view="less">
-      View Less
-    </a>
-  </div>
-  <div class="col-auto d-flex">
-    <button
-      class="btn btn-link px-1 me-1"
-      type="button"
-      title="Previous"
-      data-list-pagination="prev"
-    >
-      <span class="fas fa-chevron-left me-2"></span>
-      Previous
-    </button>
-    <button
-      class="btn btn-link px-1 ms-1"
-      type="button"
-      title="Next"
-      data-list-pagination="next"
-    >
-      Next
-      <span class="fas fa-chevron-right ms-2"></span>
-    </button>
-  </div>
 </div>
