correct js typo and hope for the best

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
                 {{{ body }}}
         </div>
     </main>
-    <script src="/js/Blockdust.js"></script>
+    <script src="/js/blockdust.js"></script>
     <script src="/js/dashboard.js"></script>
 </body>
 </html>
