--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -4,6 +4,8 @@
 
 {{! <!-- Main Content --> }}
 <div class="content pt-5">
+
+    <form class="edit-post-form">
   {{! <!-- Post Header --> }}
   <div class="pb-5">
     <div class="row g-5">
@@ -17,9 +19,8 @@
           {{post.user.username}} - {{format_date post.created_at}}
         </h5>
         {{!-- Title of Post --}}
-        <h2 class="mb-0">
-          {{post.title}}
-        </h2>
+        <label for="post-title" class="form-label">Edit post title</label>
+        <input type="text" name="post-title" value="{{post.title}}" class="form-control mb-0" />
       </div>
     </div>
   </div>
@@ -31,11 +32,13 @@
         {{! Post Text }}
         <div class="row align-items-end justify-content-between pb-5 g-3">
           <div class="col-auto">
-            <p class="fs-2 text-900 text-dark lh-sm mb-0">
-              {{post.post_text}}
-            </p>
+              <label for="post-text" class="form-label">Edit Post content</label>
+            <input class="form-control fs-2 text-900 text-dark lh-sm mb-3" type="textarea" rows="10" name="post-text" value="{{post.post_text}}">
+              <button class="btn btn-phoenix-secondary btn-sm mb-0 border border-300" type="submit">Save Post</button>
           </div>
+
         </div>
+    </form>
 
 
     {{! Comments }}
@@ -59,4 +62,5 @@
 
 {{#if loggedIn}}
 <script src="/js/comment.js"></script>
+<script src="/js/edit-post.js"></script>
 {{/if}}
